<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/LinearLayout01" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/title" android:text="@string/add_server"></TextView>
	<EditText android:layout_height="wrap_content" android:id="@+id/name" android:layout_width="match_parent" android:capitalize="words" android:hint="@string/server_name_hint" android:inputType="text" android:imeOptions="actionNext"></EditText>

	<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="match_parent">
		<EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/address" android:layout_weight="1" android:hint="@string/address_hint" android:inputType="textUri" android:imeOptions="actionNext"></EditText>
		<EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/port" android:layout_weight="2" android:text="@string/port_hint" android:inputType="numberSigned" android:imeOptions="actionDone"></EditText>
	</LinearLayout>
	

	<LinearLayout android:id="@+id/button_layout" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center_horizontal">
		<Button android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/ok" android:text="@string/ok"></Button>
		<Button android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/cancel" android:text="@string/cancel"></Button>
	</LinearLayout>

</LinearLayout>
